# Rigel

./: basic_env.sh
control-plane/: bandwidth_pricing.json  cloud_storage_probe_targets.json  config.yaml  go.mod  main.go  probe_targets.json
control-plane/receive_info/: receive_info.go
control-plane/routing/: flow-control.go  flow_control.go  routing.go  shortest_algorithm.go  update_graph.go
control-plane/scaling/: auto_fsm.go  manual_fsm.go  scaling.go
control-plane/scaling_vm/: auto_scaling.go  deploy_proxy.go  digitalocean_vm.go  vultr_vm.go
control-plane/storage/: vm-agg-diff.go  vm_agg_diff.go  vm_report_file.go
control-plane/util/: common_interface.go  config.go
data-plane/: config.yaml  main.go
data-plane/probing/: tcpprobe.go
data-plane/util/: common_interface.go
data-proxy/: go.mod  go.sum  main.go
data-proxy-rust/: Cargo.toml
data-proxy-rust/src/: client-pool.rs  client_pool.rs  config.rs  congestion.rs  health.rs  logger.rs  main.rs  proxy-handler.rs  proxy_handler.rs  utils.rs
data-proxy/congestion/: congestion.go
data-proxy/health/: health.go
data-proxy/install/: basic_env.sh
rigel-client/: config.yaml  main.go
rigel-client/api/: api.go  chunk.go  chunk_server.go  large_file.go  storage.go  upload_handler.go
rigel-client/config/: config.go
rigel-client/download/: cloud_storage.go  download.go  gcp.go  local_disk.go  remote_disk.go
rigel-client/upload/: chunk.go  client.go  direct.go  gcp.go  proxy.go  redirect.go  upload.go  upload_chunk.go  upload_direct.go  upload_gcp.go  upload_redirect.go  upload_v1.go  (+1 more)
(+50 files in other folders)
