[package]
name = "data-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros", "headers"] }
hyper = { version = "1.0", features = ["full"] }
hyper-tls = "0.6"
tokio = { version = "1.0", features = ["full"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# 系统信息/工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
rand = "0.8"
sysinfo = { version = "0.29", features = ["linux"] } # 替代 exec 获取系统信息
thiserror = "1.0" # 错误处理
once_cell = "1.18" # 全局变量